Rework JSON service

--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -1,6 +1,26 @@
 {
   "services": {
     "mergeJson": {
+      "viewModes": {
+        "json": "JSON",
+        "flat": "Плоские ключи"
+      },
+      "modals": {
+        "addKey": {
+          "title": "Добавить ключ",
+          "keyLabel": "Ключ",
+          "keyPh": "a.b.c",
+          "valueLabel": "Значение",
+          "confirm": "Добавить",
+          "cancel": "Отмена"
+        },
+        "rename": {
+          "cancel": "Отмена"
+        },
+        "delete": {
+          "cancel": "Отмена"
+        }
+      },
       "title": "Объединение JSON",
       "headline": "Сравнение и мердж переводов",
       "subtitle": "Загрузите два JSON-файла, сравните различия, выберите источники для ключей и скачайте итоговый результат.",
@@ -42,10 +62,19 @@
         "reset": "Сброс"
       },
       "actions": {
-        "addKey": "Добавить ключ",
-        "downloadJson": "Скачать JSON"
+        "fixJson": "Исправить JSON",
+        "rename": "Переименовать",
+        "deleteBlock": "Удалить блок",
+        "validate": "Проверить JSON",
+        "download": "Скачать",
+        "addKey": "Добавить ключ"
       },
       "titles": {
+        "viewMode": "Выберите формат отображения: JSON или плоские ключи.",
+        "fixJson": "Попытаться автоматически исправить некорректный JSON (кавычки/формат).",
+        "rename": "Переименовать выбранный ключ (перенос ветки).",
+        "deleteBlock": "Удалить выбранный ключ или блок из результата.",
+        "validate": "Проверить, что результат является валидным JSON.",
         "truthA": "Сделать A основной базой: совпадающие ключи берём из A, недостающие — из B.",
         "truthB": "Сделать B основной базой: совпадающие ключи берём из B, недостающие — из A.",
         "sortAsc": "Сортировать ключи по алфавиту (A → Z).",
