--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -1,4 +1,9 @@
 {
+  "header": {
+    "button": {
+      "changeTheme": "Изменить тему"
+    }
+  },
   "services": {
     "mergeJson": {
       "viewModes": {
