--- a/i18n/locales/kk.json
+++ b/i18n/locales/kk.json
@@ -647,5 +647,79 @@
       "title": "Жаңалықтарға жазылу",
       "placeholder": "Email енгізіңіз"
     }
+  },
+  "seo": {
+    "common": {
+      "siteName": "WhitesLove қызметтері",
+      "robots": "index, follow",
+      "ogType": "website",
+      "twitterCard": "summary_large_image"
+    },
+    "pages": {
+      "home": {
+        "title": "WhitesLove — күнделікті міндеттерге арналған онлайн құралдар",
+        "description": "WhitesLove платформасының басты беті: контент, деректер және құжаттармен жұмысқа арналған онлайн сервистер.",
+        "ogTitle": "WhitesLove — күнделікті міндеттерге арналған онлайн құралдар",
+        "ogDescription": "Қажетті сервисті таңдаңыз: түрлендіргіштер, редакторлар және пайдалы утилиталар.",
+        "twitterTitle": "WhitesLove — күнделікті міндеттерге арналған онлайн құралдар",
+        "twitterDescription": "Файл түрлендіріңіз, контентті өңдеңіз және күнделікті процестерді онлайн автоматтандырыңыз."
+      },
+      "services": {
+        "title": "Барлық сервистер — WhitesLove құралдар каталогы",
+        "description": "WhitesLove сервистерінің толық тізімі: санат бойынша сүзгілеп, керекті құралды тез табыңыз.",
+        "ogTitle": "WhitesLove сервистер каталогы",
+        "ogDescription": "Файлдар, контент және автоматтандыруға арналған құралдар бір жерде.",
+        "twitterTitle": "WhitesLove сервистер каталогы",
+        "twitterDescription": "Әзірлеу мен күнделікті жұмысқа арналған онлайн құралдарға жылдам қолжеткізу."
+      },
+      "converter": {
+        "title": "Онлайн файл түрлендіргіш — медиа, деректер және құжаттар",
+        "description": "Суреттерді, кестелік деректерді және құжаттарды браузерде қажетті форматқа түрлендіріңіз.",
+        "ogTitle": "WhitesLove онлайн файл түрлендіргіші",
+        "ogDescription": "Media, data және document форматтарына ыңғайлы түрлендіру.",
+        "twitterTitle": "WhitesLove онлайн файл түрлендіргіші",
+        "twitterDescription": "Файлды жүктеп, форматты таңдаңыз және нәтижені бірнеше қадамда алыңыз."
+      },
+      "dockerSearch": {
+        "title": "Docker тегтері мен алиастарын іздеу",
+        "description": "Docker тегтерін, алиастарын және тапсырмаңызға сай келетін image нұсқаларын табыңыз.",
+        "ogTitle": "Docker тегтерін іздеу құралы",
+        "ogDescription": "Қарапайым және кеңейтілген іздеу арқылы image таңдауды жылдамдатыңыз.",
+        "twitterTitle": "Docker тегтері мен алиастарын іздеу",
+        "twitterDescription": "Docker тегтерін талдау мен image таңдауға арналған ыңғайлы сервис."
+      },
+      "markdownEditor": {
+        "title": "Мессенджерлерге арналған Markdown редакторы",
+        "description": "Telegram, WhatsApp және басқа платформаларға мәтінді live preview арқылы дайындаңыз.",
+        "ogTitle": "WhitesLove онлайн Markdown редакторы",
+        "ogDescription": "Markdown қолдауымен мәтінді өңдеу, тексеру және экспорттау.",
+        "twitterTitle": "Мессенджерлерге арналған Markdown редакторы",
+        "twitterDescription": "Таза әрі оқуға ыңғайлы хабарламаларды markdown арқылы жылдам жасаңыз."
+      },
+      "mergeJson": {
+        "title": "Merge JSON онлайн — аудармаларды салыстыру және біріктіру",
+        "description": "JSON файлдарын салыстырып, кілттерді біріктіріп, валидті нәтижені жүктеп алыңыз.",
+        "ogTitle": "WhitesLove Merge JSON сервисі",
+        "ogDescription": "Локализация және құрылымды деректермен командалық жұмысқа арналған құрал.",
+        "twitterTitle": "Merge JSON онлайн",
+        "twitterDescription": "JSON құрылымдарын бірнеше қадамда біріктіріп, тексеріңіз."
+      },
+      "pdfEditor": {
+        "title": "Онлайн PDF редакторы — құжатты жүктеу және дайындау",
+        "description": "PDF файлын жүктеп, өңдеуді бастаңыз: мәтін, қолтаңба, аннотация және экспорт.",
+        "ogTitle": "WhitesLove онлайн PDF редакторы",
+        "ogDescription": "Қосымша орнатусыз браузерде PDF өңдеуді жылдам бастаңыз.",
+        "twitterTitle": "Онлайн PDF редакторы",
+        "twitterDescription": "Белгілер қосып, жаңартылған PDF-ті тікелей браузерден жүктеп алыңыз."
+      },
+      "pdfEditorDoc": {
+        "title": "PDF құжатын онлайн өңдеу",
+        "description": "Нақты PDF құжатын өңдеңіз: мәтін, фигуралар, қолтаңба және экспорт.",
+        "ogTitle": "WhitesLove ішінде PDF құжатын өңдеу",
+        "ogDescription": "PDF беттерін real-time режимінде өңдеуге арналған толық workspace.",
+        "twitterTitle": "PDF құжатын онлайн өңдеу",
+        "twitterDescription": "PDF беттерімен жұмыс істеп, өзгерістерден кейін дайын файлды жүктеңіз."
+      }
+    }
   }
 }
