--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -751,5 +751,79 @@
       "title": "Подписка на новости",
       "placeholder": "Введите ваш email"
     }
+  },
+  "seo": {
+    "common": {
+      "siteName": "WhitesLove сервисы",
+      "robots": "index, follow",
+      "ogType": "website",
+      "twitterCard": "summary_large_image"
+    },
+    "pages": {
+      "home": {
+        "title": "WhitesLove — онлайн инструменты для ежедневных задач",
+        "description": "Главная страница платформы WhitesLove: набор полезных онлайн-сервисов для контента, данных и документов.",
+        "ogTitle": "WhitesLove — онлайн инструменты для ежедневных задач",
+        "ogDescription": "Выбирайте нужный сервис: конвертеры, редакторы и утилиты для командной работы.",
+        "twitterTitle": "WhitesLove — онлайн инструменты для ежедневных задач",
+        "twitterDescription": "Конвертируйте файлы, редактируйте контент и автоматизируйте рутинные процессы онлайн."
+      },
+      "services": {
+        "title": "Все сервисы — каталог инструментов WhitesLove",
+        "description": "Полный список сервисов WhitesLove: фильтруйте по категориям и находите нужный инструмент за секунды.",
+        "ogTitle": "Каталог сервисов WhitesLove",
+        "ogDescription": "Собранные в одном месте инструменты для файлов, контента и автоматизации.",
+        "twitterTitle": "Каталог сервисов WhitesLove",
+        "twitterDescription": "Быстрый доступ к онлайн-инструментам для разработки и повседневной работы."
+      },
+      "converter": {
+        "title": "Конвертер файлов онлайн — изображения, данные и документы",
+        "description": "Конвертируйте изображения, табличные данные и документы в нужные форматы прямо в браузере.",
+        "ogTitle": "Онлайн конвертер файлов WhitesLove",
+        "ogDescription": "Поддержка популярных форматов для media, data и документов без лишних шагов.",
+        "twitterTitle": "Онлайн конвертер файлов WhitesLove",
+        "twitterDescription": "Загрузите файл, выберите формат и получите результат за пару кликов."
+      },
+      "dockerSearch": {
+        "title": "Поиск Docker тегов и алиасов",
+        "description": "Находите релевантные Docker-теги, алиасы и оптимальные варианты образов для ваших задач.",
+        "ogTitle": "Инструмент поиска Docker тегов",
+        "ogDescription": "Ускоряйте выбор Docker-образов с помощью простого и расширенного поиска.",
+        "twitterTitle": "Поиск Docker тегов и алиасов",
+        "twitterDescription": "Удобный сервис для анализа тегов и подбора Docker-образов."
+      },
+      "markdownEditor": {
+        "title": "Markdown редактор для мессенджеров",
+        "description": "Подготовьте форматированный текст для Telegram, WhatsApp и других платформ с живым предпросмотром.",
+        "ogTitle": "Онлайн Markdown редактор WhitesLove",
+        "ogDescription": "Редактирование, проверка и экспорт текста с поддержкой markdown-разметки.",
+        "twitterTitle": "Markdown редактор для мессенджеров",
+        "twitterDescription": "Удобный редактор markdown для быстрого создания аккуратных сообщений."
+      },
+      "mergeJson": {
+        "title": "Merge JSON онлайн — сравнение и объединение переводов",
+        "description": "Сравнивайте JSON-файлы, объединяйте ключи и получайте итоговый валидный результат.",
+        "ogTitle": "Сервис Merge JSON от WhitesLove",
+        "ogDescription": "Инструмент для командной работы с локализацией и структурированными данными.",
+        "twitterTitle": "Merge JSON онлайн",
+        "twitterDescription": "Объединяйте и валидируйте JSON-структуры в несколько кликов."
+      },
+      "pdfEditor": {
+        "title": "PDF редактор онлайн — загрузка и подготовка документа",
+        "description": "Загрузите PDF-файл и начните редактирование: текст, подпись, аннотации и экспорт.",
+        "ogTitle": "Онлайн PDF редактор WhitesLove",
+        "ogDescription": "Быстрый старт редактирования PDF в браузере без установки приложений.",
+        "twitterTitle": "PDF редактор онлайн",
+        "twitterDescription": "Добавляйте пометки и экспортируйте обновлённый PDF прямо из браузера."
+      },
+      "pdfEditorDoc": {
+        "title": "Редактирование PDF документа онлайн",
+        "description": "Изменяйте конкретный PDF-документ: текст, фигуры, подпись и итоговая выгрузка.",
+        "ogTitle": "Редактирование PDF документа в WhitesLove",
+        "ogDescription": "Полноценная рабочая область для правок PDF-страниц в реальном времени.",
+        "twitterTitle": "Редактирование PDF документа онлайн",
+        "twitterDescription": "Работайте с PDF-страницами и скачивайте готовый файл после правок."
+      }
+    }
   }
 }
